--- a/experience.html
+++ b/experience.html
@@ -71,8 +71,9 @@
                     <li class="col-12 col-sm-12">Performs preliminary eye exams with high-level imaging, anterior segment exams, and visual field testing</li>
                     <li class="col-12 col-sm-12">Prepares patients prior to procedures such as cataract surgery and lasers</li>
                     <li class="col-12 col-sm-12">Maintains a clean and safe environment within the clinic for JCAHO inspections</li>
-                    <li class="col-12 col-sm-12">Performs refraction to measure patient's prescription for glasses</li>
-                    <li class="col-12 col-sm-12">Administers eye drops to adjust intraocular pressure</li>
+                    <li class="col-12 col-sm-12">Performs refraction measurements for eye glasses prescriptions</li>
+                    <li class="col-12 col-sm-12">Administers topical eye drops for dilation, lowering intraocular pressure, and anesthetic purposes</li>
+                    <li class="col-12 col-sm-12">Advanced responsibilities following certification</li>
                 </ul>
             </article>
 
@@ -91,7 +92,7 @@
                     <li class="col-12 col-sm-12">Directly assists nursing teams in their daily duties on two medical/surgical units including equipment inventory</li>
                     <li class="col-12 col-sm-12">Helps coordinate services provided for patients and visitors</li>
                     <li class="col-12 col-sm-12">Facilitates team-building activities among nursing staff</li>
-                    <li class="col-12 col-sm-12">Awarded “2025 Most Supportive Volunteer” by the Duke University Hospital System</li>
+                    <li class="col-12 col-sm-12">Awarded the annual “2025 Most Supportive Volunteer” by the Duke University Hospital System</li>
                 </ul>
             </article>
 
@@ -129,10 +130,9 @@
                     <a href="https://wenzelfacialsurgery.com/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">Visit the Wenzel Facial Plastic Surgery Website</a>
                 </article>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Created marketing material for the practice using photography, website development, and social media</li>
+                    <li class="col-12 col-sm-12">Created marketing material and coordinated the first open house and other events</li>
                     <li class="col-12 col-sm-12">Attended facial plastic surgery conferences in Charlotte and Raleigh</li>
-                    <li class="col-12 col-sm-12">Planned and developed the first open house for the practice</li>
-                    <li class="col-12 col-sm-12">Coordinated with company representatives, local businesses, and employees of the practice</li>
+                    <li class="col-12 col-sm-12">Developed and maintained the practice website and social media platforms</li>
                 </ul>
             </article>
 
@@ -151,7 +151,7 @@
                     <li class="col-12 col-sm-12">Conducted patient triage and initial assessment</li>
                     <li class="col-12 col-sm-12">Assisted during examinations, procedures, specimen collection, and surgeries</li>
                     <li class="col-12 col-sm-12">Functioned as a part-time medical scribe on specified days</li>
-                    <li class="col-12 col-sm-12">Maintained a clean and safe medical office including OSHA compliance and sterilization of equipment</li>
+                    <li class="col-12 col-sm-12">Monitored for OSHA compliance and sterilization procedures including autoclave</li>
                 </ul>
             </article>
 
@@ -207,11 +207,11 @@
                     <img id="mea" class="col-12 col-sm-12 col-lg-7" src="MEA.jpg" onMouseDown="popupMsg('Please do not download this image')">
                     <a href="https://mountaineye.org/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-3 mb-3" target="blank">View the MEA Website</a>
                 </article>
-                <ul class="col-12 col-sm-12"> 
+                <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Performed preliminary eye exams with high-level imaging and visual field testing</li>
                     <li class="col-12 col-sm-12">Prepared patients prior to procedures such as cataract surgery and lasers</li>
-                    <li class="col-12 col-sm-12">Performed refraction to measure patient's prescription for glasses</li>
-                    <li class="col-12 col-sm-12">Administered eye drops to adjust intraocular pressure</li>
+                    <li class="col-12 col-sm-12">Performs refraction measurements for eye glasses prescriptions</li>
+                    <li class="col-12 col-sm-12">Administers topical eye drops for dilation, lowering intraocular pressure, and anesthetic purposes</li>
                 </ul>
             </article>
 
@@ -247,8 +247,8 @@
                     <a href="https://www.liberty.edu/casas/blog/the-power-of-peer-mentoring/" role="button" class="btn btn-info col-11 col-sm-10 col-lg-7 mt-1 mb-3" target="blank">The Power of Peer Mentoring</a>
                 </article>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Assisted students with my weekly recitations and custom problem sets tailored to cover fundamentals</li>
-                    <li class="col-12 col-sm-12">Provided guidance for students during classes with a team of peer mentors</li>
+                    <li class="col-12 col-sm-12">Led students in optional weekly mentor sessions with custom problem sets</li>
+                    <li class="col-12 col-sm-12">Provided guidance during classes along with a team of peer mentors</li>
                 </ul>
             </article>
 
