--- a/printing.html
+++ b/printing.html
@@ -54,7 +54,6 @@
         </section>
     </section>
 
-
     <section class="row experience">
         <p class="col-12 col-sm-12 section-titles experience_title">Work Experience</p>
         <section class="col-12 col-sm-12 group">
@@ -69,8 +68,9 @@
                     <li class="col-12 col-sm-12">Performs preliminary eye exams with high-level imaging, anterior segment exams, and visual field testing</li>
                     <li class="col-12 col-sm-12">Prepares patients prior to procedures such as cataract surgery and lasers</li>
                     <li class="col-12 col-sm-12">Maintains a clean and safe environment within the clinic for JCAHO inspections</li>
-                    <li class="col-12 col-sm-12">Performs refraction to measure patient's prescription for glasses</li>
-                    <li class="col-12 col-sm-12">Administers eye drops to adjust intraocular pressure</li>
+                    <li class="col-12 col-sm-12">Performs refraction measurements for eye glasses prescriptions</li>
+                    <li class="col-12 col-sm-12">Administers topical eye drops for dilation, lowering intraocular pressure, and anesthetic purposes</li>
+                    <li class="col-12 col-sm-12">Advanced responsibilities following certification</li>
                 </ul>
             </article>
 
@@ -81,10 +81,9 @@
                     <p class="col-12 col-sm-12 e-time">06/12/2023 - 06/26/2024</p>
                 </section>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Created marketing material for the practice using photography, website development, and social media</li>
+                    <li class="col-12 col-sm-12">Created marketing material and coordinated the first open house and other events</li>
                     <li class="col-12 col-sm-12">Attended facial plastic surgery conferences in Charlotte and Raleigh</li>
-                    <li class="col-12 col-sm-12">Planned and developed the first open house for the practice</li>
-                    <li class="col-12 col-sm-12">Coordinated with company representatives, local businesses, and employees of the practice</li>
+                    <li class="col-12 col-sm-12">Developed and maintained the practice website and social media platforms</li>
                 </ul>
             </article>
 
@@ -98,7 +97,7 @@
                     <li class="col-12 col-sm-12">Conducted patient triage and initial assessment</li>
                     <li class="col-12 col-sm-12">Assisted during examinations, procedures, specimen collection, and surgeries</li>
                     <li class="col-12 col-sm-12">Functioned as a part-time medical scribe on specified days</li>
-                    <li class="col-12 col-sm-12">Maintained a clean and safe medical office including OSHA compliance and sterilization of equipment</li>
+                    <li class="col-12 col-sm-12">Monitored for OSHA compliance and sterilization procedures including autoclave</li>
                 </ul>
             </article>
 
@@ -108,18 +107,16 @@
                     <p class="col-12 col-sm-12 e-co">Mountain Eye Associates</p>
                     <p class="col-12 col-sm-12 e-time">05/16/2022 - 04/26/2023</p>
                 </section>
-                <ul class="col-12 col-sm-12"> 
+                <ul class="col-12 col-sm-12">
                     <li class="col-12 col-sm-12">Performed preliminary eye exams with high-level imaging and visual field testing</li>
                     <li class="col-12 col-sm-12">Prepared patients prior to procedures such as cataract surgery and lasers</li>
-                    <li class="col-12 col-sm-12">Performed refraction to measure patient's prescription for glasses</li>
-                    <li class="col-12 col-sm-12">Administered eye drops to adjust intraocular pressure</li>
+                    <li class="col-12 col-sm-12">Performs refraction measurements for eye glasses prescriptions</li>
+                    <li class="col-12 col-sm-12">Administers topical eye drops for dilation, lowering intraocular pressure, and anesthetic purposes</li>
                 </ul>
             </article>
 
         </section>
     </section>
-
-
 
     <section class="row experience">
         <p class="col-12 col-sm-12 section-titles experience_title">Volunteer Experience</p>
@@ -135,7 +132,7 @@
                     <li class="col-12 col-sm-12">Directly assists nursing teams in their daily duties on two medical/surgical units including equipment inventory</li>
                     <li class="col-12 col-sm-12">Helps coordinate services provided for patients and visitors</li>
                     <li class="col-12 col-sm-12">Facilitates team-building activities among nursing staff</li>
-                    <li class="col-12 col-sm-12">Awarded “2025 Most Supportive Volunteer” by the Duke University Hospital System</li>
+                    <li class="col-12 col-sm-12">Awarded the annual “2025 Most Supportive Volunteer” by the Duke University Hospital System</li>
                 </ul>
             </article>
 
@@ -155,16 +152,13 @@
         </section>
     </section>
 
-
-
-
     <section class="row experience">
         <p class="col-12 col-sm-12 section-titles experience_title">Shadowing Experience</p>
         <section class="col-12 col-sm-12 group">
 
             <article class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
-                    <p class="col-12 col-sm-12 e-titles">Ophthalmologist Shadowing: Dr. Challa, Dr. McKinnon, and Dr. Maldonado</p>
+                    <p class="col-12 col-sm-12 e-titles">Ophthalmologist Shadowing: Dr. Pratap Challa, MD, Dr. Stuart McKinnon, MD, PhD</p>
                     <p class="col-12 col-sm-12 e-co">Duke Department of Ophthalmology - Retina & Glaucoma Division - Main Campus, Durham, NC</p>
                     <p class="col-12 col-sm-12 e-time">09/23/2024 - Present, Total Hours: 21</p>
                 </section>
@@ -172,7 +166,7 @@
 
             <article class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
-                    <p class="col-12 col-sm-12 e-titles">Family Medicine Providers Shadowing: Emily Watson PA-C, Amanda Macfie NP, and Dr. Wall</p>
+                    <p class="col-12 col-sm-12 e-titles">Family Medicine Shadowing: Emily Watson, PA-C, Amanda Macfie, NP, Dr. Thomas Ward, MD</p>
                     <p class="col-12 col-sm-12 e-co">Waynesville Family Practice, Waynesville, NC</p>
                     <p class="col-12 col-sm-12 e-time">05/28/2024 - 05/28/2024, Total Hours: 8</p>
                 </section>
@@ -180,7 +174,7 @@
 
             <article class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
-                    <p class="col-12 col-sm-12 e-titles">Otolaryngology PA Shadowing: Jacob Jennings PA-C</p>
+                    <p class="col-12 col-sm-12 e-titles">Otolaryngology PA Shadowing: Jacob Jennings, PA-C</p>
                     <p class="col-12 col-sm-12 e-co">Western Carolina Ear, Nose, and Throat Specialists, PLLC, Clyde, NC</p>
                     <p class="col-12 col-sm-12 e-time">06/05/2023 - 06/26/2024, Total Hours: 176</p>
                 </section>
@@ -188,7 +182,7 @@
 
             <article class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
-                    <p class="col-12 col-sm-12 e-titles">Dermatology PA Shadowing: Phaedra Hockman PA-C, Hannah Seville PA-C</p>
+                    <p class="col-12 col-sm-12 e-titles">Dermatology PA Shadowing: Phaedra Hockman, PA-C, Hannah Seville, PA-C</p>
                     <p class="col-12 col-sm-12 e-co">Mountain Laurel Dermatology, Clyde, NC</p>
                     <p class="col-12 col-sm-12 e-time">05/03/2023 - 05/05/2023, Total Hours: 24</p>
                 </section>
@@ -196,7 +190,7 @@
 
             <article class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
-                    <p class="col-12 col-sm-12 e-titles">Ophthalmologist Shadowing: Dr. Markoff and Dr. Denwood</p>
+                    <p class="col-12 col-sm-12 e-titles">Ophthalmologist Shadowing: Dr. David Markoff, MD, FACS, Dr. Caroline Denwood, MD</p>
                     <p class="col-12 col-sm-12 e-co">Mountain Eye Associates, Clyde, NC</p>
                     <p class="col-12 col-sm-12 e-time">07/01/2019 - 07/21/2019, Total Hours: 6</p>
                 </section>
@@ -204,10 +198,6 @@
 
         </section>
     </section>
-
-
-
-
 
     <section class="row experience">
         <p class="col-12 col-sm-12 section-titles experience_title">Teaching Experience</p>
@@ -220,18 +210,13 @@
                     <p class="col-12 col-sm-12 e-time">08/21/2021 - 04/27/2022</p>
                 </section>
                 <ul class="col-12 col-sm-12">
-                    <li class="col-12 col-sm-12">Assisted students with my weekly recitations and custom problem sets tailored to cover fundamentals</li>
-                    <li class="col-12 col-sm-12">Provided guidance for students during classes with a team of peer mentors</li>
+                    <li class="col-12 col-sm-12">Led students in optional weekly mentor sessions with custom problem sets</li>
+                    <li class="col-12 col-sm-12">Provided guidance during classes along with a team of peer mentors</li>
                 </ul>
             </article>
 
         </section>
     </section>
-
-
-
-
-
 
     <section style="margin-top: 3.5em;" class="row experience">
         <p class="col-12 col-sm-12 section-titles experience_title">Research Experience</p>
@@ -240,7 +225,7 @@
             <article class="col-12 col-sm-12 col-lg-12 e-about job">
                 <section class="col-11 col-sm-12">
                     <p class="col-12 col-sm-12 e-titles">Undergraduate Research Assistant, UNC Chapel Hill, Chapel Hill, NC</p>
-                    <p class="col-12 col-sm-12 e-co">Dr. Stephen Rogers's Lab, UNC Chapel Hill Biology Department</p>
+                    <p class="col-12 col-sm-12 e-co">UNC Chapel Hill Biology Department - Dr. Stephen Rogers's Lab</p>
                     <p class="col-12 col-sm-12 e-time">08/21/2021 - 04/27/2022</p>
                 </section>
                 <ul class="col-12 col-sm-12">
@@ -363,7 +348,7 @@
         <p class="col-12 col-sm-12 section-titles activities">Leadership & Activities</p>
         <section class="col-12 col-sm-12 group act-border">
             <article class="activity col-12 col-sm-12 e-about">
-                <p class="col-12 col-sm-12 e-co"><span style="font-weight: bold">Committee Member</span> - Duke MINDs Learn Committee, June 2025 - Present</p>
+                <p class="col-12 col-sm-12 e-co"><span style="font-weight: bold">Duke MINDs Learn Committee</span> June 2025 - Present</p>
             </article>
             <article class="activity col-12 col-sm-12 e-about">
                 <p class="col-12 col-sm-12 e-co"><span style="font-weight: bold">UNC American Red Cross Club</span> - Jan. 2020 - May 2022</p>
